--- a/src/main/resources/com/Pharmacy/Project/addSupplier.fxml
+++ b/src/main/resources/com/Pharmacy/Project/addSupplier.fxml
@@ -63,9 +63,9 @@
                 </image>
             </ImageView>
          <TextField fx:id="SupplierEmail" layoutX="125.0" layoutY="246.0" prefHeight="27.0" prefWidth="200.0" promptText="Supplier Email" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
-         <ListView fx:id="medicineList" layoutX="404.0" layoutY="69.0" prefHeight="184.0" prefWidth="227.0" />
+         <ListView fx:id="medicineList" layoutX="404.0" layoutY="69.0" prefHeight="184.0" prefWidth="232.0" />
          <Text layoutX="456.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Supply medicines" />
-         <Button fx:id="addMedicineButton" layoutX="480.0" layoutY="266.0" mnemonicParsing="false" onAction="#addMedicine" prefHeight="32.0" prefWidth="106.0" style="-fx-background-color: #2596be; -fx-background-radius: 15;" text="Add Medicine" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+         <Button fx:id="addMedicineButton" layoutX="480.0" layoutY="266.0" mnemonicParsing="false" onAction="#addMedicine" prefHeight="32.0" prefWidth="106.0" style="-fx-background-color: #5D9D68; -fx-background-radius: 15;" text="Add Medicine" textAlignment="CENTER" textFill="WHITE" wrapText="true">
             <font>
                <Font size="13.0" />
             </font>
